Version 1.6.0
Changes to Java 16 surefire module declarations.